Fix overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -612,9 +612,8 @@ index page
 ------------------------------------------------------------------ */
 
 html, body {
-    margin: 0!important;
-    padding: 0!important;
-    overflow: hidden!important;
+    margin: 0;
+    padding: 0;
 }
 
 
